<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".AddFoodActivity">

    <TextView
        android:id="@+id/create_food_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:text="@string/add_food"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/create_food_textview" />

    <TextView
        android:id="@+id/foodname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/name"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toTopOf="@id/foodname_entry"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        />

    <EditText
        android:id="@+id/foodname_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_food_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintBottom_toTopOf="@+id/calories_textview"
        app:layout_constraintStart_toStartOf="@id/create_food_textview" />

    <TextView
        android:id="@+id/calories_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/calories_"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/calories_entry"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        app:layout_constraintTop_toBottomOf="@+id/foodname_entry" />

    <EditText
        android:id="@+id/calories_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_calories"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/calories_textview"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        />

    <TextView
        android:id="@+id/protein_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/protein_g"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/protein_entry"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        app:layout_constraintTop_toBottomOf="@+id/calories_entry" />

    <EditText
        android:id="@+id/protein_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_protein"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/protein_textview"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        />

    <TextView
        android:id="@+id/carbs_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/carbs_g"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/carbs_entry"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        app:layout_constraintTop_toBottomOf="@+id/protein_entry" />

    <EditText
        android:id="@+id/carbs_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_carbs"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/carbs_textview"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        />

    <TextView
        android:id="@+id/fat_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fat_g"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/fat_entry"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        app:layout_constraintTop_toBottomOf="@+id/carbs_entry" />

    <EditText
        android:id="@+id/fat_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_fat"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/fat_textview"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        />

    <TextView
        android:id="@+id/fiber_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/fiber_g"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/fiber_entry"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        app:layout_constraintTop_toBottomOf="@+id/fat_entry" />

    <EditText
        android:id="@+id/fiber_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_fiber"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/fiber_textview"
        app:layout_constraintStart_toStartOf="@id/create_food_textview"
        />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_food_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/create_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_button" />


</androidx.constraintlayout.widget.ConstraintLayout>