...
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_scrollview" />

    <Button
        android:id="@+id/add_food_button"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:onClick="toAddFoodActivity"
...
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/add_to_meal_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_food_button" />

    <EditText
        android:id="@+id/meal_name_entry"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:ems="10"
        android:hint="Enter meal's name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/create_meal_button"
        app:layout_constraintStart_toEndOf="@+id/meal_name_text" />

    <Button
        android:id="@+id/create_meal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
