...
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:orientation="vertical">-->

                <TableLayout
                    android:id="@+id/meal_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="false"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
...
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meals_scrollview" />

    <Button
        android:id="@+id/add_meal_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/add_meal"
...
